tests/compile-fail/integration__integration__ecl_features__eosd_unnamed_param_still_prevents_scratch.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: script too complex to compile
   ┌─ <input>:12:11
   │
 8 │ void foo(float, int a) {
   │          ----- F0 holds this
   ·
12 │     float z;
   │           ^ no more registers of this type!
   │
   = the following registers are unavailable due to explicit use: F1, F2, F3


